[gd_scene load_steps=4 format=3 uid="uid://c5oqsu4lclgaj"]

[ext_resource type="Script" path="res://Scripts/control.gd" id="1_mg0t4"]
[ext_resource type="Theme" uid="uid://clenol0pyn35i" path="res://ui.tres" id="2_cl155"]

[sub_resource type="Theme" id="Theme_tsrwn"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mg0t4")

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = -195.0
offset_right = 274.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cl155")

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer3"]
offset_right = 548.0
offset_bottom = 222.0
grow_horizontal = 2
size_flags_vertical = 0

[node name="Title" type="Label" parent="VBoxContainer3/VBoxContainer2"]
texture_filter = 1
offset_right = 548.0
offset_bottom = 222.0
theme = ExtResource("2_cl155")
theme_override_font_sizes/font_size = 86
text = "Todd
the Slime 
slayer"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer3"]
offset_top = 226.0
offset_right = 548.0
offset_bottom = 390.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8

[node name="StartButton" type="Button" parent="VBoxContainer3/VBoxContainer"]
texture_filter = 1
offset_right = 548.0
offset_bottom = 38.0
text = "Start
"

[node name="Endlessmode" type="Button" parent="VBoxContainer3/VBoxContainer"]
texture_filter = 1
offset_top = 42.0
offset_right = 548.0
offset_bottom = 80.0
text = "Endless mode
"

[node name="OptionsButton" type="Button" parent="VBoxContainer3/VBoxContainer"]
texture_filter = 1
offset_top = 84.0
offset_right = 548.0
offset_bottom = 122.0
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer3/VBoxContainer"]
texture_filter = 1
offset_top = 126.0
offset_right = 548.0
offset_bottom = 164.0
theme = SubResource("Theme_tsrwn")
text = "Quit"

[connection signal="pressed" from="VBoxContainer3/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer3/VBoxContainer/Endlessmode" to="." method="_on_endlessmode_pressed"]
[connection signal="pressed" from="VBoxContainer3/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer3/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
